--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             Get ready to Quiz and be amazed!
           </p>
         </div>
-        <button
+        <button id="btn-blog"
           class="bg-green-600 font-light text-sm px-5 py-1 rounded text-white"
         >
           Blog
@@ -188,5 +188,10 @@
       Copyright © 2023 Quiz Hero All Rights Reserved.
     </footer>
     <!-- Footer section end -->
+    <script>
+      document.getElementById('btn-blog').addEventListener('click', function(){
+      window.location.href = './blogs.html';
+      });
+    </script>
   </body>
 </html>
